--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-textarea-autosize": "^8.5.9",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
